# ritas

./: .gitignore  EDGE_LOCAL_LLM_API.md  EDGE_SPRING_BOOT_API.md  EXPERIMENT_PC_EDGE_API.md  README.md  RITASAX_보안구성도_RIST.pptx  edge.env.example
common/: pyproject.toml
common/rist_common/: __init__.py  config.py  logging.py
common/rist_common/llm/: __init__.py  client.py  errors.py  payload.py
common/rist_common/plotting/: __init__.py  plot_style.py
rin/: README.md  __init__.py  pyproject.toml
rin/raman/: __init__.py  peaks.py  plotting.py  preprocess.py  web_analysis.py
rin/raman/resources/: func_groups.csv
rin/raman/resources/assignment_libraries/: carbon-graphite-raman.json  lithium-compound-raman.json  lmr-layered-oxide-raman.json
sune/: environment.yml  ftir_analyze.py  plot_ftir_library.py  pyproject.toml  requirements.txt
sune/docs/: 260414_FT-IR_김지훈(R).pptx
sune/ftir/: __init__.py  assignment_libraries.py  cli.py  findings.py  library_matcher.py  llm_report.py  peaks.py  plotting.py  preprocess.py  reporting.py  rule_engine.py  schema.py  scoring.py  verdict.py  web_analysis.py
sune/ftir/resources/: func_groups.csv
sune/ftir/resources/assignment_libraries/: battery-binder-polymer-peaks.json  battery-electrolyte-peaks.json  ceramic-inorganic-peaks.json  elastomer-seal-peaks.json  engineering-plastic-bioplastic-peaks.json  (+6 more)
sune/notebooks/: ftir_analysis.ipynb  ftir_plot.ipynb
sune/rules/: phenolic_foam.yaml
sune/scripts/opus_parsing/: analyze_d13.py  analyze_s01_detailed.py  check_endianness.py  deep_analysis.py  extract_d11_d13.py  find_real_spectrum.py  find_spectrum_data.py  investigate_encoding.py  opus_analysis_v2.py  opus_batch_extractor.py  opus_exact_extractor.py  opus_metadata_analysis.py  opus_parser.py  opus_spectrum_extractor.py  opus_to_graph.py  parse_directory.py  parse_opus_structure.py  read_d01_full.py  read_s01.py  try_opus_reader.py  validate_offset.py
sune/tests/: test_assignment_libraries.py  test_ftir_defensive.py  test_plot_ftir_library.py  test_rule_engine.py  test_web_analysis.py
(+116 files in other folders)
