[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rist-common"
version = "1.0.0"
description = "Shared configuration and Plotly utilities for RIST projects"
requires-python = ">=3.11"
dependencies = [
    "plotly==5.24.1",
]

[project.optional-dependencies]
llm = [
    "httpx==0.28.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rist_common*"]
