[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rist-rin-raman"
version = "0.1.0"
description = "RIN Raman raw parsing, preprocessing, peak analysis, and visualization"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.2.6",
    "pandas==2.2.3",
    "scipy==1.14.1",
    "plotly==5.24.1",
    "openpyxl==3.1.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rin*", "raman*"]

[tool.setuptools.package-data]
raman = ["resources/*.csv", "resources/assignment_libraries/*.json"]
