[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rist-sune-ftir"
version = "1.0.0"
description = "Sune FT-IR preprocessing, peak analysis, and visualization"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.2.6",
    "pandas==2.2.3",
    "scipy==1.14.1",
    "plotly==5.24.1",
    "PyYAML==6.0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ftir*"]

[tool.setuptools.package-data]
ftir = ["resources/*.csv"]
